<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="shoeStoreViewModel"
            type="com.udacity.shoestore.ui.viewmodel.ShoeStoreViewModel" />

        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />

    </data>

    <!-- I Chose to use Constraint layout because I'm able to build more complex layouts more easily without having to nest View and ViewGroup elements.
This makes it much easier to build my layouts and because of the above statement performance is better.-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/shoe_name_title_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/shoe_name_text"
            app:layout_constraintBottom_toBottomOf="@+id/show_name_edit_text"
            app:layout_constraintEnd_toStartOf="@+id/barrier"
            app:layout_constraintTop_toTopOf="@+id/show_name_edit_text" />

        <TextView
            android:id="@+id/company_name_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company_name_text"
            app:layout_constraintBottom_toBottomOf="@+id/company_name_edit_text"
            app:layout_constraintEnd_toStartOf="@+id/barrier"
            app:layout_constraintTop_toTopOf="@+id/company_name_edit_text" />

        <TextView
            android:id="@+id/shoe_size_name_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:text="Shoe size:"
            app:layout_constraintBottom_toBottomOf="@+id/shoe_size_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/shoe_size_edit_text" />

        <TextView
            android:id="@+id/description_name_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Shoe description:"
            app:layout_constraintBottom_toBottomOf="@+id/shoe_description_edit_text"
            app:layout_constraintEnd_toStartOf="@+id/barrier"
            app:layout_constraintTop_toTopOf="@+id/shoe_description_edit_text" />


        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="right"
            app:constraint_referenced_ids="shoe_name_title_text,company_name_title_text,shoe_size_name_title_text,shoe_size_name_title_text" />

        <EditText
            android:id="@+id/show_name_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="44dp"
            android:ems="10"
            android:text="@={shoeStoreViewModel.shoe.name}"
            android:hint="@string/shoe_name_hint"
            android:inputType="textPersonName"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/company_name_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="40dp"
            android:ems="10"
            android:text="@={shoeStoreViewModel.shoe.company}"
            app:layout_constraintStart_toEndOf="@id/barrier"
            android:inputType="textPersonName"
            android:hint="@string/company_name_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/show_name_edit_text" />

        <EditText
            android:id="@+id/shoe_size_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="36dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="@={`` + shoeStoreViewModel.shoe.size}"
            app:layout_constraintStart_toEndOf="@id/barrier"
            android:hint="@string/shoe_size_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/company_name_edit_text" />

        <EditText
            android:id="@+id/shoe_description_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="36dp"
            android:ems="10"
            android:text="@={shoeStoreViewModel.shoe.description}"
            app:layout_constraintStart_toEndOf="@id/barrier"
            android:inputType="textPersonName"
            android:hint="@string/shoe_description_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_size_edit_text" />

        <Button
            android:id="@+id/save_button"
            style="@style/ActionButtonStyle.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_medium"
            android:layout_marginTop="@dimen/dp_32"
            android:text="@string/save_button_text"
            android:textColor="@color/colorWhite"
            android:onClick="@{(v) -> shoeStoreViewModel.addShoeToList()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_description_edit_text" />

        <Button
            android:id="@+id/cancel_button"
            style="@style/ActionButtonStyle.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_medium"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginBottom="@dimen/margin_medium"
            android:onClick="@{(v) -> shoeStoreViewModel.navBack()}"
            android:text="@string/cancel_button_text"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/save_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>